--- a/scss/style.scss
+++ b/scss/style.scss
@@ -323,6 +323,12 @@ section{
             color: $gri;
         }
 
+        .hero-section {
+            h1 {
+                font-size: 25px;
+            }
+        }
+
     }
 
     /* Custom, iPhone Retina */ 
