mobil nav arkaplan rengi beyaz eklendi.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,6 +31,7 @@ header{
         -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
         transition: background .5s ease-in-out,padding .5s ease-in-out;
+        background-color: $beyaz;
 	}
 
     .top-nav-collapse {
