--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@ header {
     padding: 15px 0;
     -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
     -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-    transition: background .5s ease-in-out,padding .5s ease-in-out; }
+    transition: background .5s ease-in-out,padding .5s ease-in-out;
+    background-color: #ffffff; }
   header .top-nav-collapse {
     background-color: #ffffff; }
   header .nav > li > a {
